[gd_scene load_steps=17 format=2]

[ext_resource path="res://scene/main/InitWorld.gd" type="Script" id=1]
[ext_resource path="res://scene/gui/MainGUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://scene/main/SwitchSprite.gd" type="Script" id=3]
[ext_resource path="res://scene/main/MainScene.gd" type="Script" id=4]
[ext_resource path="res://scene/main/Schedule.gd" type="Script" id=5]
[ext_resource path="res://scene/main/EnemyAI.gd" type="Script" id=6]
[ext_resource path="res://scene/main/DungeonBoard.gd" type="Script" id=7]
[ext_resource path="res://scene/main/ObjectState.gd" type="Script" id=8]
[ext_resource path="res://scene/main/RemoveObject.gd" type="Script" id=9]
[ext_resource path="res://scene/main/ReloadGame.gd" type="Script" id=10]
[ext_resource path="res://scene/main/RandomNumber.gd" type="Script" id=11]
[ext_resource path="res://scene/main/PlayerInput.gd" type="Script" id=12]
[ext_resource path="res://scene/main/ObjectData.gd" type="Script" id=13]
[ext_resource path="res://scene/main/SpriteType.gd" type="Script" id=14]
[ext_resource path="res://scene/main/HitPoint.gd" type="Script" id=15]
[ext_resource path="res://scene/main/DangerZone.gd" type="Script" id=16]

[node name="MainScene" type="Node2D"]
script = ExtResource( 4 )

[node name="MainGUI" parent="." instance=ExtResource( 2 )]
margin_left = 20.0
margin_top = 20.0
margin_right = 780.0
margin_bottom = 580.0

[node name="InitWorld" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="PlayerInput" type="Node2D" parent="."]
script = ExtResource( 12 )

[node name="ReloadGame" type="Node2D" parent="PlayerInput"]
script = ExtResource( 10 )

[node name="Schedule" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="EnemyAI" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="DungeonBoard" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="RemoveObject" type="Node2D" parent="."]
script = ExtResource( 9 )

[node name="RandomNumber" type="Node2D" parent="."]
script = ExtResource( 11 )

[node name="SwitchSprite" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="DangerZone" type="Node2D" parent="."]
script = ExtResource( 16 )

[node name="ObjectData" type="Node2D" parent="."]
script = ExtResource( 13 )

[node name="ObjectState" type="Node2D" parent="ObjectData"]
script = ExtResource( 8 )

[node name="SpriteType" type="Node2D" parent="ObjectData"]
script = ExtResource( 14 )

[node name="HitPoint" type="Node2D" parent="ObjectData"]
script = ExtResource( 15 )
